fix card border on mobile

--- a/styles/goals.css
+++ b/styles/goals.css
@@ -34,3 +34,10 @@ body {
     margin-block-start: 0;
     margin-block-end: 0;
 }
+
+@media (max-width: 700px) {
+    .card {
+        max-width: 80%;
+        margin: 1rem;
+    }
+}
